--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,9 @@
     <artifactId>lab2</artifactId>
     <version>1</version>
     <packaging>war</packaging>
-
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <dependencies>
 
         <dependency>
@@ -44,7 +46,5 @@
             <url>https://code.lds.org/nexus/content/groups/main-repo</url>
         </repository>
     </repositories>
-
-
 
 </project>
